file upload wokrs in base64